--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.13)
 
-set(PROJECT_NAME second_opengl_example)
+set(PROJECT_NAME opengl_example)
 set(CMAKE_CXX_STANDARD 17)
 
 	
-set(WINDOW_NAME "Second OpenGL Example")
+set(WINDOW_NAME "OpenGL Example")
 set(WINDOW_WIDTH 960)
 set(WINDOW_HEIGHT 540)
 
