--- a/imgui.ini
+++ b/imgui.ini
@@ -8,3 +8,13 @@ Pos=-6,51
 Size=330,699
 Collapsed=0
 
+[Window][G-Buffers]
+Pos=328,57
+Size=512,338
+Collapsed=0
+
+[Window][SSAO]
+Pos=325,394
+Size=736,410
+Collapsed=1
+
